--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,6 @@
 	},
 	"require-dev": {
 		"mikey179/vfsStream": "1.1.*",
-		"phpunit/phpunit": "4.* || 5.*"
+		"enl/moses-php-client": "^1.0"
 	}
 }
